# font-moeum

./: .gitignore  LICENSE  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
docs/: REFERENCE.md  TODO.md
docs/superpowers/plans/: 2026-07-13-default-output-name-from-font-metadata.md
docs/superpowers/specs/: 2026-07-13-default-output-name-from-font-metadata-design.md
icons/: README.md  icon.icns
sample/: LICENSE-D2Coding.txt  README.md
scripts/: .coverage  build_sidecar.py  fitmerge.py  merge.py  otf2ttf.py  pyproject.toml  sidecar.py  sidecar.spec  smoke_sidecar.py  test_otf2ttf.py
src/: App.css  App.tsx  ErrorBoundary.tsx  FontSlot.tsx  SidebarSection.tsx  StatusBar.tsx  fontUtils.test.ts  fontUtils.ts  outputName.test.ts  outputName.ts  samples.ts  status.test.ts  status.ts  syntax.test.ts  syntax.ts  types.ts  useCursorTracking.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
